--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/netinfo": "^6.0.0",
     "expo": "^40.0.1",
     "expo-constants": "^10.0.1",
     "expo-file-system": "^10.0.0",
